Primeiras funções, mudança de estilo prévia

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
         <title>Atividade 08 - Marcos Roberto</title>
         <meta charset="UTF-8"/>
         <script src="js/functions.js"></script>
+        <link rel="stylesheet" href="css/style.css"/>
     </head>
     <body>
         <h1>Formulário</h1>
+        <h2>Get</h2>
+        <a href="javascript:callFetchWithGet()">Get</a>
+        <p class="json" id="json"></p>
     </body>
 </html>
