--- a/index.html
+++ b/index.html
@@ -4,12 +4,44 @@
         <title>Atividade 08 - Marcos Roberto</title>
         <meta charset="UTF-8"/>
         <script src="js/functions.js"></script>
-        <link rel="stylesheet" href="css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="css/style.css"/>
     </head>
     <body>
         <h1>Formulário</h1>
-        <h2>Get</h2>
+        <h2>Operações</h2>
         <a href="javascript:callFetchWithGet()">Get</a>
+        <a href="javascript:callFetchWithPost('Cristianismo','Marcos', 2013)">Post</a>
+        <a href="javascript:callFetchWithPut(1, 'Davai','Mamr', 2094)">Put</a>
+        <a href="javascript:callFetchWithDelete(1)">Delete</a>
         <p class="json" id="json"></p>
+        <h2>Formulário Básico (Post)</h2>
+        <form id="postForm">
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title"/></br>
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author"/></br>
+            <label for="originalyear">OriginalYearOfPublication:</label>
+            <input type="number" id="originalyear" name="originalyear"/>
+            <button type="submit" onclick="return submitPost()">Submit</button>
+        </form>
+        <h2>Formulário Básico (Put)</h2>
+        <form id="putForm">
+            <label for="id">Id:</label>
+            <input type="number" id="id" name="id"/></br>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="title"/></br>
+            <label for="author">Author:</label>
+            <input type="text" id="author" name="author"/></br>
+            <label for="originalyear">OriginalYearOfPublication:</label>
+            <input type="number" id="originalyear" name="originalyear"/>
+            <button type="submit" onclick="return submitPut()">Submit</button>
+        </form>
+        <h2>Formulário Básico (Delete)</h2>
+        <form id="deleteForm">
+            <label for="id">Id:</label>
+            <input type="number" id="id" name="id">
+            <button type="submit" onclick="return submitDelete()">Submit</button>
+        </form>
+
     </body>
 </html>
