Alterando o estilo com CSS

--- a/index.html
+++ b/index.html
@@ -11,11 +11,8 @@
             <h1>Formulário</h1>
         </header>
         <div class="div_maior">
-            <h2>Operações</h2>
+            <h2>Clique aqui para ver o JSON</h2>
                 <a href="javascript:callFetchWithGet()">Get</a>
-                <a href="javascript:callFetchWithPost('Cristianismo','Marcos', 2013)">Post</a>
-                <a href="javascript:callFetchWithPut(1, 'Davai','Mamr', 2094)">Put</a>
-                <a href="javascript:callFetchWithDelete(1)">Delete</a>
             <h2>Formulário para inserir um livro</h2>
             <form id="postForm">
                 <label for="title">Insira o título do livro</label></br>
@@ -48,7 +45,7 @@
         </div>
         <div class="json">
             <h2>Json Text</h2>
-            <p id="json"></p>
+            <section id="json"></section>
         </div>
 
     </body>
