Alterando o tipo de input do formulário

--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
                 <label for="author">Insira o autor do livro</label></br>
                 <input type="text" id="author" name="author"/></br>
                 <label for="originalyear">Insira o ano de publicação do livro</label></br>
-                <input type="number" id="originalyear" name="originalyear"/></br>
+                <input type="text" id="originalyear" name="originalyear"/></br>
                 <button type="submit" onclick="return submitPost()">Submit</button>
             </form>
             <h2>Formulário para atualizar um livro</h2>
             <form id="putForm">
                 <label for="id">Selecione o livro a ser atualizado</label></br>
-                <input type="number" id="id" name="id"/></br>
+                <input type="text" id="id" name="id"/></br>
                 <label for="title">Insira o novo título do livro</label></br>
                 <input type="text" id="title" name="title"/></br>
                 <label for="author">Insira o novo autor do livro</label></br>
                 <input type="text" id="author" name="author"/></br>
                 <label for="originalyear">Insira o novo ano de publicação</label></br>
-                <input type="number" id="originalyear" name="originalyear"/></br>
+                <input type="text" id="originalyear" name="originalyear"/></br>
                 <button type="submit" onclick="return submitPut()">Submit</button>
             </form>
             <h2>Formulário para deletar um livro</h2>
             <form id="deleteForm">
                 <label for="id">Selecione o livro a ser deletado</label></br>
-                <input type="number" id="id" name="id"></br>
+                <input type="text" id="id" name="id"></br>
                 <button type="submit" onclick="return submitDelete()">Submit</button>
             </form>
             
